unpackaged/main/default/objects/Opportunity/fields/Account_ASM__c.field-meta.xml
<CustomField>
    <fullName>Account_ASM__c</fullName>
    <formula>Account.Total_ASM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ASM amount from Account</inlineHelpText>
    <label>Account ASM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>