unpackaged/main/default/objects/Opportunity/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Account.Account_Code__c</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>