unpackaged/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>Text(Account.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>