unpackaged/main/default/objects/Opportunity/fields/Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition__c</fullName>
    <label>Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>JRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>