unpackaged/main/default/objects/Opportunity/fields/Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_1__c</fullName>
    <formula>IF(IsWon &amp;&amp; Finance_Amount__c&lt;&gt;0, Finance_Amount__c,
IF((OO_Forecast__c || Include_in_Forecast__c )&amp;&amp; NOT(IsClosed) &amp;&amp; RM_Forecast_Amount__c&gt;0, RM_Forecast_Amount__c,
IF((OO_Forecast__c || Include_in_Forecast__c )&amp;&amp; (TEXT( StageName)= &#39;Lost&#39; || TEXT( StageName)= &#39;Opt Out / No Bid&#39;) &amp;&amp; RM_Forecast_Amount__c&gt;0, RM_Forecast_Amount__c,
Amount)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Won Deal: Finance Rev Rec LF if not blank
Open or Lost Forecast Deal: RM/Upside Forecast LF if not blank
Otherwise: Amount</inlineHelpText>
    <label>Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>