unpackaged/main/default/objects/Opportunity/fields/AMS_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>AMS_Opportunity_URL__c</fullName>
    <label>AMS Opportunity URL</label>
    <type>Url</type>
</CustomField>