unpackaged/main/default/objects/Opportunity/fields/AMS_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the AMS discount in eligible discount.</description>
    <inlineHelpText>Ensure to enter a valid AMS opportunity that qualifies for the AMS Behavioral Discount.</inlineHelpText>
    <label>AMS Program Link</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This opportunity is either not of type Application Managed Services or not linked to the same account, please review.</errorMessage>
        <filterItems>
            <field>Opportunity.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.Record_Type__c</field>
            <operation>equals</operation>
            <value>Application Managed Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AMS Program Link</relationshipLabel>
    <relationshipName>AMSProgramLink</relationshipName>
    <type>Lookup</type>
</CustomField>