unpackaged/main/default/objects/Opportunity/fields/AMS_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Type__c</fullName>
    <label>AMS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requests</fullName>
                <default>true</default>
                <label>Requests</label>
            </value>
            <value>
                <fullName>New Program</fullName>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
            <value>
                <fullName>Advanced Requests</fullName>
                <isActive>false</isActive>
                <label>Advanced Requests</label>
            </value>
            <value>
                <fullName>Hours</fullName>
                <isActive>false</isActive>
                <label>Hours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>