unpackaged/main/default/objects/Opportunity/fields/AMS_Rollover_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>AMS_Rollover_of_Hours__c</fullName>
    <description>Monthly Service Period Only</description>
    <inlineHelpText>For Monthly Service Period Only. 
0 - No Rollover
3 Months
6 Months
12 - Ongoing</inlineHelpText>
    <label>AMS Rollover of Hours (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>