unpackaged/main/default/objects/Opportunity/fields/AMS_Service_Period__c.field-meta.xml
<CustomField>
    <fullName>AMS_Service_Period__c</fullName>
    <description>Number of Months in each Service Period</description>
    <inlineHelpText>Number of Months in each Service Period</inlineHelpText>
    <label>AMS Service Period (Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>