unpackaged/main/default/objects/Opportunity/fields/AMS_Term__c.field-meta.xml
<CustomField>
    <fullName>AMS_Term__c</fullName>
    <label>z_AMS Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>