unpackaged/main/default/objects/Opportunity/fields/AMS_Units_per_Service_Period__c.field-meta.xml
<CustomField>
    <fullName>AMS_Units_per_Service_Period__c</fullName>
    <defaultValue>40</defaultValue>
    <inlineHelpText>Number of Requests - Minimum 40
Standard Service Period 40, 50, 60, 70, 80, 90,100,150,200</inlineHelpText>
    <label>AMS Units per Service Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>