unpackaged/main/default/objects/Opportunity/fields/Annual_SaaS_ASM__c.field-meta.xml
<CustomField>
    <fullName>Annual_SaaS_ASM__c</fullName>
    <description>First Year SaaS or Subscription ASM</description>
    <inlineHelpText>First Year SaaS or Subscription ASM</inlineHelpText>
    <label>First Year ASM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>