unpackaged/main/default/objects/Opportunity/fields/Annual_SaaS_Cloud_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_SaaS_Cloud_Fee__c</fullName>
    <description>First Year SaaS Cloud Fee</description>
    <inlineHelpText>Annual Support &amp; Maintenance * 1.25 when it&#39;s blank</inlineHelpText>
    <label>First Year SaaS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>