unpackaged/main/default/objects/Opportunity/fields/Annual_SaaS_Licence_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_SaaS_Licence_Value__c</fullName>
    <description>Annual SaaS or Subscription Contract Value</description>
    <inlineHelpText>Amount / Term Avg Year</inlineHelpText>
    <label>Annual Licence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>