unpackaged/main/default/objects/Opportunity/fields/Apply_AMS_Program_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_AMS_Program_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that AMS program sold (behavioural discount) should be applied.</description>
    <inlineHelpText>Select this if the customer is eligible for the AMS Program Sold discount.</inlineHelpText>
    <label>OBSOLETE Apply AMS Program Discount</label>
    <type>Checkbox</type>
</CustomField>