unpackaged/main/default/objects/Opportunity/fields/ARR1__c.field-meta.xml
<CustomField>
    <fullName>ARR1__c</fullName>
    <formula>IF(IsWon &amp;&amp; Finance_Amount_ARR__c&lt;&gt;0, Finance_Amount_ARR__c,
IF((OO_Forecast__c || Include_in_Forecast__c )&amp;&amp; NOT(IsClosed) &amp;&amp; RM_ARR__c&gt;0, RM_ARR__c,
IF((OO_Forecast__c || Include_in_Forecast__c )&amp;&amp;(TEXT( StageName)= &#39;Lost&#39; || TEXT( StageName)= &#39;Opt Out / No Bid&#39;) &amp;&amp; RM_ARR__c&gt;0, RM_ARR__c,
ARR__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Won Deal: Finance Rev Rec ARR if not blank
Open or Lost Forecast Deal: RM/Upside ARR if not blank
Otherwise: ARR (Formula)</inlineHelpText>
    <label>ARR1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>