unpackaged/main/default/objects/Opportunity/fields/ARR_Movement_Category__c.field-meta.xml
<CustomField>
    <fullName>ARR_Movement_Category__c</fullName>
    <label>ARR Movement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Client</fullName>
            </value>
            <value>
                <fullName>Cancelled Modules, Products, Reductions</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Currency Movement</fullName>
            </value>
            <value>
                <fullName>Indexation</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Other Movements</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - LARR</fullName>
            </value>
            <value>
                <fullName>T1 Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>