unpackaged/main/default/objects/Opportunity/fields/ARR_Sub_Movement_Category__c.field-meta.xml
<CustomField>
    <fullName>ARR_Sub_Movement_Category__c</fullName>
    <label>ARR Sub-Movement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Client</fullName>
            </value>
            <value>
                <fullName>Amalgamation</fullName>
            </value>
            <value>
                <fullName>Cancelled SaaS Platform</fullName>
            </value>
            <value>
                <fullName>Cancelled SaaS Platform environment</fullName>
            </value>
            <value>
                <fullName>Cancelled everything except SaaS Platform environment</fullName>
            </value>
            <value>
                <fullName>Cancelled Module/s</fullName>
            </value>
            <value>
                <fullName>Cancelled Product/s</fullName>
            </value>
            <value>
                <fullName>SaaS Platform environment expiry</fullName>
            </value>
            <value>
                <fullName>SaaS Platform environment reduction</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Currency Movement</fullName>
            </value>
            <value>
                <fullName>Indexation</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Other Movements</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - Add Product, Users, Uplift</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - DXP early adopter</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - New logo</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - Novation of Licences</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - Product uptake</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - SaaS extension</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - SaaS extras</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - SaaS flips</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - SaaS to On Premise</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - Spatial renewal</fullName>
            </value>
            <value>
                <fullName>Salesforce Opportunity - LARR</fullName>
            </value>
            <value>
                <fullName>T1 Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>