unpackaged/main/default/objects/Opportunity/fields/Auto_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate that Opportunity is for auto-amendment</description>
    <label>Auto-Amendment</label>
    <type>Checkbox</type>
</CustomField>