unpackaged/main/default/objects/Opportunity/fields/Auto_Order__c.field-meta.xml
<CustomField>
    <fullName>Auto_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Order</label>
    <type>Checkbox</type>
</CustomField>