unpackaged/main/default/objects/Opportunity/fields/Auto_Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_End_Date__c</fullName>
    <label>Auto-Renewal End Date</label>
    <type>Date</type>
</CustomField>