unpackaged/main/default/objects/Opportunity/fields/Bid_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Modified_Date__c</fullName>
    <label>Bid Modified Date</label>
    <summarizedField>BID__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>BID__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>