unpackaged/main/default/objects/Opportunity/fields/BSC__c.field-meta.xml
<CustomField>
    <fullName>BSC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project Variation</description>
    <inlineHelpText>Project Variation</inlineHelpText>
    <label>Project Variation</label>
    <type>Checkbox</type>
</CustomField>