unpackaged/main/default/objects/Opportunity/fields/Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Business_Problem__c</fullName>
    <label>Business Problem</label>
    <type>TextArea</type>
</CustomField>