unpackaged/main/default/objects/Opportunity/fields/CAM_Forecast__c.field-meta.xml
<CustomField>
    <fullName>CAM_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CAMs tick only</inlineHelpText>
    <label>CAM Forecast</label>
    <type>Checkbox</type>
</CustomField>