unpackaged/main/default/objects/Opportunity/fields/Cloud_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Assessment_Type__c</fullName>
    <inlineHelpText>Assessment Sent triggers an assessment email to Customer Contact automatically.</inlineHelpText>
    <label>Cloud Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment Sent</fullName>
            </value>
            <value>
                <fullName>Readiness</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>