unpackaged/main/default/objects/Opportunity/fields/Cloud_BDM__c.field-meta.xml
<CustomField>
    <fullName>Cloud_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>