unpackaged/main/default/objects/Opportunity/fields/Cloud_Complexity_Level__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Complexity_Level__c</fullName>
    <label>Cloud Complexity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>