unpackaged/main/default/objects/Opportunity/fields/Cloud_Complexity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Complexity_Reason__c</fullName>
    <label>Cloud Complexity Reason</label>
    <type>TextArea</type>
</CustomField>