unpackaged/main/default/objects/Opportunity/fields/Cloud_CTS_Signed_Off__c.field-meta.xml
<CustomField>
    <fullName>Cloud_CTS_Signed_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud CTS Signed Off</label>
    <type>Checkbox</type>
</CustomField>