unpackaged/main/default/objects/Opportunity/fields/Cloud_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Qualification__c</fullName>
    <inlineHelpText>What is the customer&#39;s pain?
Business driver ie. Ci Anywhere
Exec sponsor
Timeframe
Compelling Event eg. End of contract
Budget eg. capex/opex</inlineHelpText>
    <label>Cloud Qualification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>