unpackaged/main/default/objects/Opportunity/fields/Cloud_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Cloud Service Fee</label>
    <type>Checkbox</type>
</CustomField>