unpackaged/main/default/objects/Opportunity/fields/Cloud_Service_Fee_per_year__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Fee_per_year__c</fullName>
    <inlineHelpText>Customer ASM*1.25 if it&#39;s blank for a Cloud Opportunity</inlineHelpText>
    <label>Annual Cloud Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>