unpackaged/main/default/objects/Opportunity/fields/Cloud_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Status_Comments__c</fullName>
    <label>Cloud Status/Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>