unpackaged/main/default/objects/Opportunity/fields/Cloud_Term__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Term__c</fullName>
    <label>z_Cloud Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
                <default>true</default>
                <label>1 Year</label>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>