unpackaged/main/default/objects/Opportunity/fields/Commission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Commission_Comments__c</fullName>
    <inlineHelpText>Used By Sales Operations and Finance team</inlineHelpText>
    <label>Commission Comments</label>
    <type>TextArea</type>
</CustomField>