unpackaged/main/default/objects/Opportunity/fields/Compare_Forecast_PL__c.field-meta.xml
<CustomField>
    <fullName>Compare_Forecast_PL__c</fullName>
    <description>A process flow to update this field</description>
    <label>Compare Forecast PL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SDI_Forecast_Ticked_Only</fullName>
                <color>#FF9900</color>
                <label>SDI Forecast Ticked Only</label>
            </value>
            <value>
                <fullName>RM_Forecast_Ticked_Only</fullName>
                <color>#3366FF</color>
                <label>RM Forecast Ticked Only</label>
            </value>
            <value>
                <fullName>Both_Forecast_Ticked</fullName>
                <color>#78C953</color>
                <label>Both Forecast Ticked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>