unpackaged/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <inlineHelpText>Is there a Compelling Event?</inlineHelpText>
    <label>Compelling Event</label>
    <type>TextArea</type>
</CustomField>