unpackaged/main/default/objects/Opportunity/fields/Consulting__c.field-meta.xml
<CustomField>
    <fullName>Consulting__c</fullName>
    <label>Consulting Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>