unpackaged/main/default/objects/Opportunity/fields/Consulting_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Approval_Status__c</fullName>
    <label>Consulting Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved before deal signed</fullName>
            </value>
            <value>
                <fullName>Approved after deal signed</fullName>
            </value>
            <value>
                <fullName>No approval submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>