unpackaged/main/default/objects/Opportunity/fields/Consulting_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Discount_Percentage__c</fullName>
    <label>Consulting Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>