unpackaged/main/default/objects/Opportunity/fields/Consulting_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Engagement_Date__c</fullName>
    <description>Use Consulting Start Date from Consulting Request</description>
    <inlineHelpText>Use Consulting Start Date from Consulting Request</inlineHelpText>
    <label>Consulting Engagement Date</label>
    <summarizedField>Service_Only_Consulting_Request__c.Date_Start__c</summarizedField>
    <summaryForeignKey>Service_Only_Consulting_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>