unpackaged/main/default/objects/Opportunity/fields/Consulting_Report_Attached__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Report_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consulting Report Attached</label>
    <type>Checkbox</type>
</CustomField>