unpackaged/main/default/objects/Opportunity/fields/ConsultingS_Required__c.field-meta.xml
<CustomField>
    <fullName>ConsultingS_Required__c</fullName>
    <label>Consulting Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>