unpackaged/main/default/objects/Opportunity/fields/Contract_Extension__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used when quoting a contract extension for an existing Saas Contract.</description>
    <inlineHelpText>Select if this is a contract extension for an existing Saas Contract.</inlineHelpText>
    <label>Contract Extension</label>
    <type>Checkbox</type>
</CustomField>