unpackaged/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Requested</fullName>
            </value>
            <value>
                <fullName>Contract Drafted</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Received Customer Redline</fullName>
            </value>
            <value>
                <fullName>Legal Engaged</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Final paperwork with customer for signing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>