unpackaged/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Contract</fullName>
            </value>
            <value>
                <fullName>TechOne Contract</fullName>
            </value>
            <value>
                <fullName>Quote to be signed</fullName>
            </value>
            <value>
                <fullName>Variation to existing agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>