unpackaged/main/default/objects/Opportunity/fields/Country_Area__c.field-meta.xml
<CustomField>
    <fullName>Country_Area__c</fullName>
    <formula>TEXT(Account.CountryArea__c)</formula>
    <label>Country/Area</label>
    <type>Text</type>
</CustomField>