unpackaged/main/default/objects/Opportunity/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Returns the BU Code depending on the Account&#39;s Country/Region selected.</description>
    <formula>CASE( Account.CountryArea__c ,
&quot;Australia&quot;,&quot;11&quot;,
&quot;New Zealand&quot;,&quot;13&quot;,
&quot;United Kingdom&quot;,&quot;15&quot;,
&quot;Asia&quot;,&quot;12&quot;,
&quot;Pacific&quot;,&quot;11&quot;,
&quot;Distributors&quot;,&quot;11&quot;,
NULL)</formula>
    <inlineHelpText>Country Code of the corresponding Account&#39;s Country/Region selected.</inlineHelpText>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>