unpackaged/main/default/objects/Opportunity/fields/CR_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Expiry_Date__c</fullName>
    <description>CR Expiry Date</description>
    <label>CR Expiry Date</label>
    <type>Date</type>
</CustomField>